# wb-irrigation

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release-deb.yml
irrigationd/: __init__.py  config.py  main.py
irrigationd/domain/: __init__.py  duration.py  irrigation_service.py  safety.py  schedule_validation.py  scheduler.py  state.py  zone.py  zone_validation.py
irrigationd/mqtt/: __init__.py  client.py  discovery.py  probe.py  runtime_subscriptions.py  topics.py  wb_virtual_device.py
irrigationd/storage/: __init__.py  db.py  event_repo.py  init_db.py  models.py  relay_repo.py  schedule_repo.py  settings_repo.py  zone_repo.py
irrigationd/web/: __init__.py  app.py  routes_pages.py  routes_relays.py  routes_schedules.py  routes_settings.py  routes_topics.py  routes_zones.py  schedule_overview.py  schemas.py  serializers.py
packaging/: build-deb.sh  default-config.yaml  wb-irrigationd.service  wb-irrigationd.tmpfiles
packaging/deb/: conffiles  control.in  copyright  postinst  prerm
packaging/examples/: README.md  api-examples.sh  create-relay.json  create-schedule.json  flow-meter.json  (+3 more)
tests/: test_asyncio_loop_binding.py  test_debian_packaging.py  test_discovery.py  test_duration_minutes.py  test_multi_relay_zone.py  test_probe.py  test_pump_sequence.py  test_pump_settings.py  test_python39_compatibility.py  test_rain_safety.py  test_relay_entities.py  test_safety.py  test_schedule_overview.py  test_schedule_validation.py  test_topics.py  test_volume_schedule.py  test_web_modals.py  test_web_root_path.py  test_zone_validation.py
(+18 files in other folders)
