[build-system]
requires = ["setuptools>=68,<76"]
build-backend = "setuptools.build_meta"

[project]
name = "wb-irrigationd"
version = "0.1.1"
description = "Local irrigation controller for Wiren Board"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110,<0.116",
  "uvicorn>=0.27,<0.35",
  "pydantic>=2.7,<2.11",
  "jinja2>=3.1,<3.2",
  "python-multipart>=0.0.9,<0.1",
  "sqlalchemy>=2.0,<2.1",
  "paho-mqtt>=2.0,<3",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
test = ["pytest>=8,<9", "pytest-asyncio>=0.23,<1", "httpx>=0.27,<1"]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "httpx>=0.27,<1",
  "ruff>=0.11,<1",
]

[project.scripts]
wb-irrigationd = "irrigationd.main:run"

[tool.setuptools.packages.find]
include = ["irrigationd*"]

[tool.setuptools.package-data]
"irrigationd.web" = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
